--- a/vvv-nginx.conf
+++ b/vvv-nginx.conf
@@ -1,7 +1,7 @@
 server {
 	listen			80;
 	listen			443 ssl;
-	server_name		wptutorial.dev;
+	server_name		videoseo.dev;
 	root			{vvv_path_to_folder}/htdocs;
 	include			/etc/nginx/nginx-wp-common.conf;
 }
